[package]
name = "simple_crc"
version = "0.1.0"
authors = ["paunstefan <paunstefan@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/paunstefan/simple_crc"
description = "Easy to use, no_std, lightweight CRC library for Rust"
keywords = ["crc", "crc8", "crc16", "crc32", "crc64", "no-std"]
categories = ["algorithms", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false